istio/istio_gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: oteldemo-gateway
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: oteldemoroute
spec:
  parentRefs:
    - name: oteldemo-gateway
  rules:
    - backendRefs:
        - name: opentelemetry-demo-frontend
          port: 8080
