istio/waypoint.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: default-waypoint
spec:
  gatewayClassName: istio-waypoint
  listeners:
    - name: mesh
      port: 15008
      protocol: HBONE
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: collector-gateway
spec:
  gatewayClassName: istio
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authotel
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["otel-demo","istio-system","default"]
    - to:
      - operation:
          methods: ["POST"]
